fix: fix #43 change button border radius on small screens

--- a/css/footerstyle.css
+++ b/css/footerstyle.css
@@ -394,7 +394,7 @@ INPUT[type="search"]{
 	padding:32px 35px 30px 33px;
 	text-decoration:none;
 	border: 0px;
-	border-radius: 2px;
+	border-radius: 3px;
 	letter-spacing: 1px;
 	font-weight: bold;
 }	
