--- a/css/menustyle.css
+++ b/css/menustyle.css
@@ -402,7 +402,7 @@ header{
 	font-family:'Ubuntu';
 	font-weight: bold;
 	font-size:45px;
-	border-radius: 2px;
+	border-radius: 3px;
 	z-index: 4;
 }
 
